# GridFS

./: .gitignore  AUTHENTICATION_SYSTEM_STATUS.md  GUIA_DESPLIEGUE_AWS_EC2.md  GUIA_INSTANCIA_EXISTENTE.md  Instructions.txt  LICENSE  README.md  SECURITY.md  grid_dfs_guia_de_despliegue_en_aws_sin_volumen_adicional.md  instrucciones.md  regenerate_proto.sh
.github/workflows/: ci.yml
Cliente/src/: cli.py  datanode_client.py  namenode_client.py
Cliente/src/griddfs/: griddfs_pb2.py  griddfs_pb2_grpc.py
DataNode/: dependency-reduced-pom.xml  pom.xml
DataNode/src/main/java/: BlockStorage.java  DataNodeServer.java
NameNode/: AUTHENTICATION_IMPLEMENTATION_GUIDE.cpp
NameNode/src/: CMakeLists.txt  griddfs.grpc.pb.h  main.cc  namenode_server.cc  namenode_server.h
NameNode/src/Proto/: griddfs.grpc.pb.cc
Proto/: griddfs.pb.cc  griddfs.pb.h  griddfs.proto
docs/: VIDEO_GUION.md
scripts/: deploy-griddfs-aws.sh  install-base.sh  install-client.sh  install-datanode.sh  install-namenode.sh
